Fix layout shift

--- a/server/components/ViewPage/ViewPage.module.css
+++ b/server/components/ViewPage/ViewPage.module.css
@@ -11,6 +11,7 @@
 }
 .emblaContainer {
   display: flex;
+  height: 420px;
 }
 .emblaSlide {
   flex: 0 0 450px;
